// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model User {
  id             String          @id @default(uuid())
  email          String          @unique
  name           String
  avatar         String?
  passwordHash   String
  emailVerifiedAt DateTime?
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  wallets        Wallet[]
  transactions   Transaction[]
  budgets        Budget[]
  recurringBills RecurringBill[]
  sessions       Session[]
  passwordResetTokens PasswordResetToken[]
  emailVerificationTokens EmailVerificationToken[]
  auditLogs      AuditLog[]
  habitScoreSnapshots HabitScoreSnapshot[]
}

model HabitScoreSnapshot {
  id           String   @id @default(uuid())
  userId       String
  period       String   @db.VarChar(7)
  methodology  String   @db.VarChar(50)
  score        Int
  factors      Json
  actions      Json
  calculatedAt DateTime @default(now()) @updatedAt
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, period, methodology])
  @@index([userId, calculatedAt])
}

model AuditLog {
  id          String   @id @default(uuid())
  actorUserId String?
  action      String   @db.VarChar(50)
  resourceType String   @db.VarChar(50)
  resourceId  String?
  requestId   String   @db.VarChar(100)
  metadata    Json?
  createdAt   DateTime @default(now())
  actor       User?    @relation(fields: [actorUserId], references: [id], onDelete: SetNull)

  @@index([actorUserId, createdAt])
  @@index([action, createdAt])
}

model EmailVerificationToken {
  id        String    @id @default(uuid())
  userId    String
  tokenHash String    @unique @db.VarChar(64)
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model PasswordResetToken {
  id        String    @id @default(uuid())
  userId    String
  tokenHash String    @unique @db.VarChar(64)
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Session {
  id               String    @id @default(uuid())
  userId           String
  refreshTokenHash String    @unique @db.VarChar(64)
  deviceName       String    @db.VarChar(100)
  expiresAt        DateTime
  revokedAt        DateTime?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt
  user             User      @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Wallet {
  id             String          @id @default(uuid())
  userId         String
  name           String
  type           String // CASH, BANK, EWALLET
  balance        BigInt          @default(0)
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  user           User            @relation(fields: [userId], references: [id])
  transactions   Transaction[]
  recurringBills RecurringBill[]
}

model Transaction {
  id                 String              @id @default(uuid())
  userId             String
  walletId           String
  type               String // INCOME, EXPENSE
  amount             BigInt
  categoryId         String? // e.g., Food, Transport
  merchant           String?
  notes              String?
  idempotencyKey     String?             @db.VarChar(128)
  date               DateTime            @default(now())
  createdAt          DateTime            @default(now())
  user               User                @relation(fields: [userId], references: [id])
  wallet             Wallet              @relation(fields: [walletId], references: [id])
  recurringExecution RecurringExecution?

  @@unique([userId, idempotencyKey])
}

model Budget {
  id         String   @id @default(uuid())
  userId     String
  categoryId String
  amount     BigInt
  month      Int
  year       Int
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  user       User     @relation(fields: [userId], references: [id])

  @@unique([userId, categoryId, month, year])
}

model RecurringBill {
  id         String               @id @default(uuid())
  userId     String
  title      String
  amount     BigInt
  categoryId String
  walletId   String
  dueDate    Int // Day of month 1-31
  createdAt  DateTime             @default(now())
  updatedAt  DateTime             @updatedAt
  user       User                 @relation(fields: [userId], references: [id])
  wallet     Wallet               @relation(fields: [walletId], references: [id])
  executions RecurringExecution[]
}

model RecurringExecution {
  id              String        @id @default(uuid())
  recurringBillId String
  period          String        @db.VarChar(7)
  transactionId   String?       @unique
  createdAt       DateTime      @default(now())
  recurringBill   RecurringBill @relation(fields: [recurringBillId], references: [id], onDelete: Cascade)
  transaction     Transaction?  @relation(fields: [transactionId], references: [id], onDelete: SetNull)

  @@unique([recurringBillId, period])
}
